--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ nbproject/private/private.xml
 *.xml
 *.xml
 nbproject/private/private.xml
+nbproject/private/private.xml
+nbproject/private/private.properties
