--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/libropolis.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AnimatonClass.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\AnimateClass\\AnimatonClass.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\PC\\Desktop\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.AnimatonClass.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
