--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,10 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.jcalendar-1.3.3.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\jcalendar-1.3.3.jar\\jcalendar-1.3.3.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\PC\\Desktop\\jcalendar-1.4.jar
+file.reference.AnimatonClass.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\animation-1.2.0.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jcalendar-1.4.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\marco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
