--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.jcalendar-1.4.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jc
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-user.properties.file=C:\\Users\\marco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
