--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,13 +32,17 @@ excludes=
 file.reference.AnimatonClass.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\AnimateClass\\AnimatonClass.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\PC\\Desktop\\jcalendar-1.4.jar
+file.reference.RSAnimation.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RojeruSan Librer\u00edas\\RSAnimation.jar
+file.reference.RSPanelSlider.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RSPanelSlider.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.AnimatonClass.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.RSPanelSlider.jar}:\
+    ${file.reference.RSAnimation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
