--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,17 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AnimatonClass.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\AnimateClass\\AnimatonClass.jar
+file.reference.commons-lang3-3.8.1.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\commons-lang3-3.8.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\commons-logging-1.2.jar
+file.reference.hsqldb-2.5.0.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\hsqldb-2.5.0.jar
+file.reference.jackcess-3.0.1.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\jackcess-3.0.1.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jcalendar-1.3.3.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\PC\\Desktop\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\mysql-connector-java-8.0.25.jar
 file.reference.RSAnimation.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RojeruSan Librer\u00edas\\RSAnimation.jar
+file.reference.RSButtonIconI.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RojeruSan Librer\u00edas\\RSButtonIconI.jar
 file.reference.RSPanelSlider.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RSPanelSlider.jar
+file.reference.ucanaccess-5.0.1.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\ucanaccess-5.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -42,7 +49,14 @@ javac.classpath=\
     ${file.reference.AnimatonClass.jar}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${file.reference.RSPanelSlider.jar}:\
-    ${file.reference.RSAnimation.jar}
+    ${file.reference.RSAnimation.jar}:\
+    ${file.reference.mysql-connector-java-8.0.25.jar}:\
+    ${file.reference.ucanaccess-5.0.1.jar}:\
+    ${file.reference.commons-lang3-3.8.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.hsqldb-2.5.0.jar}:\
+    ${file.reference.jackcess-3.0.1.jar}:\
+    ${file.reference.RSButtonIconI.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
