--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,19 +1,19 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.AnimatonClass.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\AnimateClass\\AnimatonClass.jar
-file.reference.commons-lang3-3.8.1.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\commons-lang3-3.8.1.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\commons-logging-1.2.jar
-file.reference.hsqldb-2.5.0.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\hsqldb-2.5.0.jar
-file.reference.jackcess-3.0.1.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\lib\\jackcess-3.0.1.jar
-file.reference.jcalendar-1.3.3.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\jcalendar-1.3.3.jar\\jcalendar-1.3.3.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\PC\\Desktop\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\mysql-connector-java-8.0.25.jar
-file.reference.RSAnimation.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RojeruSan Librer\u00edas\\RSAnimation.jar
-file.reference.RSButtonIconI.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RojeruSan Librer\u00edas\\RSButtonIconI.jar
-file.reference.RSPanelSlider.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\RSPanelSlider.jar
-file.reference.ucanaccess-5.0.1.jar=C:\\Users\\PC\\Documents\\LibreriasJava\\ucanaccess-5.0.1.jar
+file.reference.AnimatonClass.jar=C:\\Users\\marco\\OneDrive\\Documentos\\GitHub\\Libropolis\\AnimatonClass.jar
+file.reference.commons-lang3-3.8.1.jar=C:\\Users\\marco\\Downloads\\commons-lang3-3.8.1.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\marco\\Downloads\\commons-logging-1.2.jar
+file.reference.hsqldb-2.5.0.jar=C:\\Users\\marco\\Downloads\\hsqldb-2.5.0.jar
+file.reference.jackcess-3.0.1.jar=C:\\Users\\marco\\Downloads\\jackcess-3.0.1.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.25.jar=C:\\Users\\marco\\Downloads\\mysql-connector-java-8.0.25.jar
+file.reference.RSAnimation.jar=C:\\Users\\marco\\OneDrive\\Documentos\\Poo\\RSAnimation.jar
+file.reference.RSButtonIconI.jar=C:\\Users\\marco\\OneDrive\\Documentos\\GitHub\\Libropolis\\RSButtonIconI.jar
+file.reference.RSPanelSlider.jar=C:\\Users\\marco\\OneDrive\\Documentos\\GitHub\\Libropolis\\RSPanelSlider.jar
+file.reference.ucanaccess-5.0.1.jar=C:\\Users\\marco\\Downloads\\UCanAccess-5.0.1.bin\\ucanaccess-5.0.1.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
-user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\marco\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
